RESOLVED FIXED196119
REGRESSION (r243094): ePub files do not render or open in Books
https://bugs.webkit.org/show_bug.cgi?id=196119
Summary REGRESSION (r243094): ePub files do not render or open in Books
Chris Dumez
Reported 2019-03-21 16:44:55 PDT
ePub files do not render or open in Books since r243094.
Attachments
WIP Patch (4.14 KB, patch)
2019-03-21 16:45 PDT, Chris Dumez
no flags
Patch (5.52 KB, patch)
2019-03-21 18:05 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews106 for mac-highsierra-wk2 (3.14 MB, application/zip)
2019-03-21 21:09 PDT, EWS Watchlist
no flags
Patch (5.52 KB, patch)
2019-03-22 09:14 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-03-21 16:45:13 PDT
Chris Dumez
Comment 2 2019-03-21 16:45:55 PDT
Created attachment 365644 [details] WIP Patch
EWS Watchlist
Comment 3 2019-03-21 16:59:16 PDT
Attachment 365644 [details] did not pass style-queue: ERROR: Source/WebKit/UIProcess/WebProcessPool.cpp:1221: Missing space before { [whitespace/braces] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 4 2019-03-21 18:05:17 PDT
EWS Watchlist
Comment 5 2019-03-21 21:09:53 PDT
Comment on attachment 365661 [details] Patch Attachment 365661 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/11608723 New failing tests: imported/w3c/web-platform-tests/mediacapture-record/MediaRecorder-constructor.html
EWS Watchlist
Comment 6 2019-03-21 21:09:55 PDT
Created attachment 365674 [details] Archive of layout-test-results from ews106 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
Brady Eidson
Comment 7 2019-03-22 09:04:55 PDT
Comment on attachment 365661 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=365661&action=review Any testing possible? > Source/WebKit/ChangeLog:9 > + Do not delay the WebProcess launch until a load when contructing a Web view and the client "Web view" is bizarre. WebView? > Source/WebKit/UIProcess/API/Cocoa/WKProcessGroup.mm:219 > + // If the client can observer when the connection to the WebProcess injected bundle is established, then we cannot can observe
Chris Dumez
Comment 8 2019-03-22 09:11:38 PDT
(In reply to Brady Eidson from comment #7) > Comment on attachment 365661 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=365661&action=review > > Any testing possible? > > > Source/WebKit/ChangeLog:9 > > + Do not delay the WebProcess launch until a load when contructing a Web view and the client > > "Web view" is bizarre. > > WebView? WebView is the name of the class. It is a Web View, or maybe a web view. https://developer.apple.com/design/human-interface-guidelines/ios/views/web-views/ How is it weird? > > > Source/WebKit/UIProcess/API/Cocoa/WKProcessGroup.mm:219 > > + // If the client can observer when the connection to the WebProcess injected bundle is established, then we cannot > > can observe OK.
Chris Dumez
Comment 9 2019-03-22 09:14:20 PDT
Chris Dumez
Comment 10 2019-03-22 09:27:18 PDT
Comment on attachment 365731 [details] Patch Clearing flags on attachment: 365731 Committed r243379: <https://trac.webkit.org/changeset/243379>
Chris Dumez
Comment 11 2019-03-22 09:27:20 PDT
All reviewed patches have been landed. Closing bug.
Daniel Bates
Comment 12 2019-03-22 11:50:46 PDT
(In reply to Chris Dumez from comment #8) > (In reply to Brady Eidson from comment #7) > > Comment on attachment 365661 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=365661&action=review > > > > Any testing possible? > > > > > Source/WebKit/ChangeLog:9 > > > + Do not delay the WebProcess launch until a load when contructing a Web view and the client > > > > "Web view" is bizarre. > > > > WebView? > > WebView is the name of the class. It is a Web View, or maybe a web view. > https://developer.apple.com/design/human-interface-guidelines/ios/views/web- > views/ > > How is it weird? > Agree with Brady: very bizarre. Out of curiosity, when someone tells you something is bizarre and you don’t see a reply back from them then why do you ignore the bizarreness without full justification (from a English grammar book in this case) and still commit? Is it because this is a minor thing in your eyes? Just curious, because if that is considered acceptable then maybe I should adopt such manners as I always thought it was rude to do what you did and commit. Always felt compelled to go the extra mile to find the literature to prove correctness. By the way, none of what I have written is meant to offend or be taking as sarcasim. (Typos and bad grammar in my response due to typing on iPhone). I genuinely want to know if maybe I have an old world mentality on manners :D, cuz i’m old :D. This is going to seem obvious on reflection, and i’m Not a grammar expert, but just looked at the linked document you provided and thinking when you are referring to a view that displays web content you don’t treat web as a proper noun and if you read the first paragraph on the linked page, first sentence, you will see our dev pub does just that “web view”. Not “Web view”. As Brady said, if your referring to the class then you write “WebView”. You only write “Web view” if the sentence starts with “web” and that falls out of English writing semantics revolving capitalization. > > > > > Source/WebKit/UIProcess/API/Cocoa/WKProcessGroup.mm:219 > > > + // If the client can observer when the connection to the WebProcess injected bundle is established, then we cannot > > > > can observe > > OK.
Chris Dumez
Comment 13 2019-03-22 11:52:53 PDT
(In reply to Daniel Bates from comment #12) > (In reply to Chris Dumez from comment #8) > > (In reply to Brady Eidson from comment #7) > > > Comment on attachment 365661 [details] > > > Patch > > > > > > View in context: > > > https://bugs.webkit.org/attachment.cgi?id=365661&action=review > > > > > > Any testing possible? > > > > > > > Source/WebKit/ChangeLog:9 > > > > + Do not delay the WebProcess launch until a load when contructing a Web view and the client > > > > > > "Web view" is bizarre. > > > > > > WebView? > > > > WebView is the name of the class. It is a Web View, or maybe a web view. > > https://developer.apple.com/design/human-interface-guidelines/ios/views/web- > > views/ > > > > How is it weird? > > > > Agree with Brady: very bizarre. Out of curiosity, when someone tells you > something is bizarre and you don’t see a reply back from them then why do > you ignore the bizarreness without full justification (from a English > grammar book in this case) and still commit? Is it because this is a minor > thing in your eyes? Just curious, because if that is considered acceptable > then maybe I should adopt such manners as I always thought it was rude to do > what you did and commit. Always felt compelled to go the extra mile to find > the literature to prove correctness. By the way, none of what I have written > is meant to offend or be taking as sarcasim. (Typos and bad grammar in my > response due to typing on iPhone). I genuinely want to know if maybe I have > an old world mentality on manners :D, cuz i’m old :D. > > This is going to seem obvious on reflection, and i’m Not a grammar expert, > but just looked at the linked document you provided and thinking when you > are referring to a view that displays web content you don’t treat web as a > proper noun and if you read the first paragraph on the linked page, first > sentence, you will see our dev pub does just that “web view”. Not “Web > view”. As Brady said, if your referring to the class then you write > “WebView”. You only write “Web view” if the sentence starts with “web” and > that falls out of English writing semantics revolving capitalization. I used "web view" in my patch, with lower case w.
Daniel Bates
Comment 14 2019-03-22 13:04:26 PDT
(In reply to Chris Dumez from comment #13) > (In reply to Daniel Bates from comment #12) > > (In reply to Chris Dumez from comment #8) > > > (In reply to Brady Eidson from comment #7) > > > > Comment on attachment 365661 [details] > > > > Patch > > > > > > > > View in context: > > > > https://bugs.webkit.org/attachment.cgi?id=365661&action=review > > > > > > > > Any testing possible? > > > > > > > > > Source/WebKit/ChangeLog:9 > > > > > + Do not delay the WebProcess launch until a load when contructing a Web view and the client > > > > > > > > "Web view" is bizarre. > > > > > > > > WebView? > > > > > > WebView is the name of the class. It is a Web View, or maybe a web view. > > > https://developer.apple.com/design/human-interface-guidelines/ios/views/web- > > > views/ > > > > > > How is it weird? > > > > > > > Agree with Brady: very bizarre. Out of curiosity, when someone tells you > > something is bizarre and you don’t see a reply back from them then why do > > you ignore the bizarreness without full justification (from a English > > grammar book in this case) and still commit? Is it because this is a minor > > thing in your eyes? Just curious, because if that is considered acceptable > > then maybe I should adopt such manners as I always thought it was rude to do > > what you did and commit. Always felt compelled to go the extra mile to find > > the literature to prove correctness. By the way, none of what I have written > > is meant to offend or be taking as sarcasim. (Typos and bad grammar in my > > response due to typing on iPhone). I genuinely want to know if maybe I have > > an old world mentality on manners :D, cuz i’m old :D. > > > > This is going to seem obvious on reflection, and i’m Not a grammar expert, > > but just looked at the linked document you provided and thinking when you > > are referring to a view that displays web content you don’t treat web as a > > proper noun and if you read the first paragraph on the linked page, first > > sentence, you will see our dev pub does just that “web view”. Not “Web > > view”. As Brady said, if your referring to the class then you write > > “WebView”. You only write “Web view” if the sentence starts with “web” and > > that falls out of English writing semantics revolving capitalization. > > I used "web view" in my patch, with lower case w. Nope, you didn’t. Try again: <https://trac.webkit.org/changeset/243379/webkit#file1>
Chris Dumez
Comment 15 2019-03-23 17:40:09 PDT
(In reply to Daniel Bates from comment #14) > (In reply to Chris Dumez from comment #13) > > (In reply to Daniel Bates from comment #12) > > > (In reply to Chris Dumez from comment #8) > > > > (In reply to Brady Eidson from comment #7) > > > > > Comment on attachment 365661 [details] > > > > > Patch > > > > > > > > > > View in context: > > > > > https://bugs.webkit.org/attachment.cgi?id=365661&action=review > > > > > > > > > > Any testing possible? > > > > > > > > > > > Source/WebKit/ChangeLog:9 > > > > > > + Do not delay the WebProcess launch until a load when contructing a Web view and the client > > > > > > > > > > "Web view" is bizarre. > > > > > > > > > > WebView? > > > > > > > > WebView is the name of the class. It is a Web View, or maybe a web view. > > > > https://developer.apple.com/design/human-interface-guidelines/ios/views/web- > > > > views/ > > > > > > > > How is it weird? > > > > > > > > > > Agree with Brady: very bizarre. Out of curiosity, when someone tells you > > > something is bizarre and you don’t see a reply back from them then why do > > > you ignore the bizarreness without full justification (from a English > > > grammar book in this case) and still commit? Is it because this is a minor > > > thing in your eyes? Just curious, because if that is considered acceptable > > > then maybe I should adopt such manners as I always thought it was rude to do > > > what you did and commit. Always felt compelled to go the extra mile to find > > > the literature to prove correctness. By the way, none of what I have written > > > is meant to offend or be taking as sarcasim. (Typos and bad grammar in my > > > response due to typing on iPhone). I genuinely want to know if maybe I have > > > an old world mentality on manners :D, cuz i’m old :D. > > > > > > This is going to seem obvious on reflection, and i’m Not a grammar expert, > > > but just looked at the linked document you provided and thinking when you > > > are referring to a view that displays web content you don’t treat web as a > > > proper noun and if you read the first paragraph on the linked page, first > > > sentence, you will see our dev pub does just that “web view”. Not “Web > > > view”. As Brady said, if your referring to the class then you write > > > “WebView”. You only write “Web view” if the sentence starts with “web” and > > > that falls out of English writing semantics revolving capitalization. > > > > I used "web view" in my patch, with lower case w. > > Nope, you didn’t. Try again: > > <https://trac.webkit.org/changeset/243379/webkit#file1> I guess I missed an instance, I am heartbroken.
Note You need to log in before you can comment on or make changes to this bug.