REGRESSION (r243094): ePub files do not render or open in Books https://bugs.webkit.org/show_bug.cgi?id=196119 <rdar://problem/49121686>

Reviewed by Brady Eidson.

Do not delay the WebProcess launch until a load when contructing a web view and the client
may observe when its injected bundle is loaded via WKProcessGroupDelegate's
didCreateConnectionToWebProcessPlugIn.

* UIProcess/API/Cocoa/WKProcessGroup.mm:
(-[WKProcessGroup setDelegate:]):
* UIProcess/WebInspectorUtilities.cpp:
(WebKit::inspectorProcessPool):
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::createWebPage):
* UIProcess/WebProcessPool.h:

Canonical link: https://commits.webkit.org/210441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243379 268f45cc-cd09-0410-ab3c-d52691b4dbfc